syntax = "proto3";

// Data model
message Repo {
    string repo_id = 2;
    int64 creation_date = 3;
    string default_branch = 4;
    float partial_commit_ratio = 5;
}

message Block {
    string address = 1;
    int64 size = 2;
}

message Blob {
    repeated Block blocks = 1;
    string checksum = 2; // used as ETag in S3
}

message Entry {
    string name = 1;
    string address = 2; // hash of either Object or Entry prefix if tree
    int64 timestamp = 3; // timestamp and size are denormalized here for quick listing
    int64 size = 4;
    string checksum = 5; // used as ETag in S3
}

message Node {
    repeated Entry entries = 1;
    repeated string pointers = 2;
}

message Commit {
    string tree = 1;
    repeated string parents = 2;
    string committer = 3;
    string message = 4;
    int64 timestamp = 5;
    map<string, string> metadata = 6;
}

message Branch {
    string name = 1;
    string commit = 2;
    string commit_root = 3; // de-normalization to save a round trip
    string workspace_root = 4;
}

message Tombstone {}

message Object {
     Blob blob = 1;
     map<string, string> metadata = 2;
     int64 timestamp = 3;
     int64 size = 4;
}

message MultipartUpload {
    string path = 1;
    string id = 2;
    int64 timestamp = 3;
}

message MultipartUploadPart {
    Blob blob = 1;
    int64 timestamp = 2;
    int64 size = 3;
}

message MultipartUploadPartRequest {
    int32 partNumber = 1;
    string etag = 2;
}


message WorkspaceEntry {
    string path = 1;
    oneof data {
        Tombstone tombstone = 2;
        Object object = 3;
    }
}

